[package]
name = "project"
version = "0.1.0"
authors = ["jdonaldson40505 <jdonaldson40505>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
#parking_lot = "*"
futures = "*"
#futures-await-test = "0.3.0"
tokio = { version = "0.2", features = ["full"] }
actix-web = "2.0"
actix-rt = "1.0"
uuid= { version = "*", features = ["v4"]}
serde = {version = "*" , features = ["derive"]}
serde_json = "*"
base64 = "*"